--- a/css/styles.css
+++ b/css/styles.css
@@ -9,3 +9,27 @@ body {
 #depthFormInput {
   width : 55px;
 }
+
+.tooltip2 {
+  position: relative;
+  display: inline-block;
+  border-bottom: 3px dotted black;
+}
+
+.tooltip2 .tooltiptext2 {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+}
+
+.tooltip2:hover .tooltiptext2 {
+  visibility: visible;
+}
