--- a/css/styles.css
+++ b/css/styles.css
@@ -1,39 +1,86 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 body {
-  width : 350px;
+  width : 340px;
+  font-family: 'Roboto', sans-serif;
 }
 
 #depth-input {
   width : 55px;
 }
 
-.tooltip2 {
-  position: relative;
-  display: inline-block;
-}
 
-.tooltip2 .tooltiptext2 {
-  visibility: hidden;
-  width: 140px;
-  background-color: black;
-  color: #fff;
-  text-align: center;
-  border-radius: 6px;
-  padding: 5px 0;
-
-   /* Position the tooltip on the left side */
-   left: -20px; /* Update the left property value to adjust the distance from the component */
-   top: 110%; /* Update the top property value to vertically center the tooltip */
-   transform: translateY(-50%); /* Update the transform property value to vertically center the tooltip */
-
-  /* Position the tooltip */
-  position: absolute;
-  z-index: 1;
-}
-
-.tooltip2:hover .tooltiptext2 {
-  visibility: visible;
-}
 .sizing {
   width: 100%;
-  height: 40px;
+  height: 100px;
+}
+
+.sphere3D {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+  transition: all 0.2s ease;
+  cursor: pointer;
+  overflow: hidden;
+}
+span.artistic {
+  color: grey;              /* A bold, warm color */
+  /*background-color: grey;    Soft yellow background */      /* Padding around the text */
+  border-radius: 8px;          /* Rounded corners */
+  /* border: 2px dashed white;   Dashed border */
+
+  font-style: italic;          /*  Italic font style */
+  font-weight: bold;           /* Bold font weight */
+   /* Slight spacing between letters */
+  display: inline-block;       /* Allows padding and width/height properties */
+ /* Smooth transition for hover effect */
+}
+
+
+/* .progress{
+  position: relative;
+  width: 120px;
+  height: 120px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  color: #000;
+}
+
+.progress-ring__circle {
+  transition: stroke-dashoffset 0.35s;
+  transform: rotate(-90deg);
+  transform-origin: 50% 50%;
+  stroke-dasharray: 365;
+  stroke-dashoffset: 91.25;
+}
+
+.progress-ring__text {
+  position: absolute;
+} */
+
+.sphere3D img {
+  width: 100%;
+  height: auto;
+}
+
+.sphere3D:hover {
+  box-shadow: 0px 5px 15px rgba(0,0,0,0.3);
+  transform: perspective(500px) rotateX(10deg) translateY(-5px);
+}
+
+.sphere3D:active {
+  box-shadow: 0px 2px 10px rgba(0,0,0,0.3);
+  transform: perspective(500px) rotateX(10deg) translateY(2px);
+  top: 3px;
+}  
+
+.feedback-form-hide {
+  display: none;
+}
+.feedback-form-show {
+  display: block;
 }
